--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 	<properties>
 		<maven.compiler.source>21</maven.compiler.source>
     	<maven.compiler.target>21</maven.compiler.target>
+		<maven.compiler.release>21</maven.compiler.release>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -87,6 +88,8 @@
             	<artifactId>maven-compiler-plugin</artifactId>
             	<!-- Use a stable version -->
             	<configuration>
+					<source>21</source>
+					<target>21</target>
                 	<release>21</release>
             	</configuration>
         	</plugin>
